--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -255,7 +255,7 @@
                   <br>
                   <br>
                   <ul>
-                  <li><b>(Γ)funzione di sensibilità a tre dimensione che descrive la ricettività</b></li>
+                  <li><b>(Γ)funzione di sensibilità che descrive la ricettività</b></li>
                   <li><b>(G)forma dello spazio</b></li>
                   <li><b>(M)materiali</b></li>
                 </ul>
