--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -127,7 +127,7 @@
                   </h4>
                   <p class="mbr-text mbr-fonts-style display-7">
                     <ul>
-                      <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html"><i><b>Master Handbook of Acoustics</b></i></a></li>
+                      <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/Master_Handbook_of_Acoustics_5th_Edition_(2009)_(Everest).pdf"><i><b>Master Handbook of Acoustics</b></i></a></li>
                     </ul>
                       <br><br>
                   </p>
