--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -137,6 +137,29 @@
       </div>
   </section>
 
+  <!-- Web-->
+
+  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
+      <div class="container">
+          <div class="row justify-content-center">
+              <div class="col-md-12 col-lg-10">
+                  <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
+                    <br>
+                    <br>
+                      <strong>BIBLIOGRAFIA</strong>
+                  </h4>
+                  <p class="mbr-text mbr-fonts-style display-7">
+                    <ul>
+                      <li><a href="https://www.falstad.com/mathphysics.html"><b>Falstad - Applets</b></a></li>
+                      <li><a href="https://www.roomeqwizard.com/"><b>REW - Room Acoustics Software</b></a></li>
+                    </ul>
+                      <br><br>
+                  </p>
+              </div>
+          </div>
+      </div>
+  </section>
+
 <!-- Footer-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
 
