--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -146,7 +146,7 @@
                   <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
                     <br>
                     <br>
-                      <strong>BIBLIOGRAFIA</strong>
+                      <strong>WEB</strong>
                   </h4>
                   <p class="mbr-text mbr-fonts-style display-7">
                     <ul>
