--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -150,6 +150,15 @@
                     <ul>
                       <li><a href="https://www.falstad.com/mathphysics.html"><b>Falstad - Applets</b></a></li>
                       <li><a href="https://www.roomeqwizard.com/"><b>REW - Room Acoustics Software</b></a></li>
+                      <li><a href="https://amcoustics.com/tools/amroc?l=500&w=700&h=300&fo=200&fu=21&r60=0.6"><b>AMROC - The Room Modes Calculator</b></a></li>
+                      <li><a href="https://amcoustics.com/tools/amray"><b>AMROC - Raytracing sketchpad</b></a></li>
+                      <li><a href="http://hyperphysics.phy-astr.gsu.edu/hbase/Acoustic/auditcon.html#c1"><b>Hyperphysics</b></a>, sito di didattica della fisica organizzato per mappe concettuali. Il link si riferisce alla sezione dedicata all'acustica degli spazi.</li>
+                      <li><a href="http://www.acoustic-glossary.co.uk/"><b>Acoustic Glossary</b></a></li>
+                      <li><a href="http://store.uni.com/catalogo/uni-en-iso-3382-1-2009"><b>Norma ISO 3382 Part 1</b></a>, spazi performativi</li>
+                      <li><a href="https://www.akutek.info/concert_hall_acoustics_files/parameters.htm"><b>AKUTEK.INFO (Concert Hall Acoustics)</b></a></li>
+                      <li><a href="https://www.akutek.info/concert_hall_acoustics_files/parameters.htm"><b>Acustica della sala da concerto</b></a></li>
+                      <li><a href="https://www.akutek.info/Presentations/MS_Preference_Prediction_Pres.pdf"><b>Room Acoustical Parameters: Can concert hall preference be predicted?</b></a></li>
+                      <li><a href="https://www.akutek.info/research.htm"><b>Sito di ricerca acustica</b></a></li>
                     </ul>
                       <br><br>
                   </p>
