--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -154,7 +154,7 @@
                       <li><a href="https://amcoustics.com/tools/amray"><b>AMROC - Raytracing sketchpad</b></a></li>
                       <li><a href="http://hyperphysics.phy-astr.gsu.edu/hbase/Acoustic/auditcon.html#c1"><b>Hyperphysics</b></a>, sito di didattica della fisica organizzato per mappe concettuali. Il link si riferisce alla sezione dedicata all'acustica degli spazi.</li>
                       <li><a href="http://www.acoustic-glossary.co.uk/"><b>Acoustic Glossary</b></a></li>
-                      <li><a href="http://store.uni.com/catalogo/uni-en-iso-3382-1-2009"><b>Norma ISO 3382 Part 1</b></a>, spazi performativi</li>
+                      <li><a href="https://store.uni.com/uni-en-iso-3382-1-2009"><b>Norma ISO 3382 Part 1</b></a>, spazi performativi</li>
                       <li><a href="https://www.akutek.info/concert_hall_acoustics_files/parameters.htm"><b>AKUTEK.INFO (Concert Hall Acoustics)</b></a></li>
                       <li><a href="https://www.akutek.info/concert_hall_acoustics_files/parameters.htm"><b>Acustica della sala da concerto</b></a></li>
                       <li><a href="https://www.akutek.info/Presentations/MS_Preference_Prediction_Pres.pdf"><b>Room Acoustical Parameters: Can concert hall preference be predicted?</b></a></li>
