--- a/pages/learn.html
+++ b/pages/learn.html
@@ -126,7 +126,7 @@
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingOne">
                                 <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse1_1" aria-expanded="false" aria-controls="collapse1">
-                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Acoustic</strong></h6>
+                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Acoustic (1)</strong></h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
@@ -162,7 +162,7 @@
                           <div class="card mb-3">
                               <div class="card-header" role="tab" id="headingTwo">
                                   <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2" aria-expanded="false" aria-controls="collapse2">
-                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Analysis</strong></h6>
+                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Analysis (2)</strong></h6>
                                       <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                   </a>
                               </div>
@@ -212,7 +212,7 @@
                           <div class="card mb-3">
                               <div class="card-header" role="tab" id="headingThree">
                                   <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse3_3" aria-expanded="false" aria-controls="collapse3">
-                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Laboratories</strong></h6>
+                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Laboratories (1)</strong></h6>
                                       <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                   </a>
                               </div>
@@ -247,7 +247,7 @@
                           <div class="card mb-3">
                               <div class="card-header" role="tab" id="headingFour">
                                   <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse4_4" aria-expanded="false" aria-controls="collapse4">
-                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>History</strong></h6>
+                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>History (4)</strong></h6>
                                       <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                   </a>
                               </div>
