--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -230,6 +230,7 @@
                     Nella funzione di emissione il modulo non ha alcun peso, quindi consideriamo solo azimut e zenit.
                     <ul>
                     <li><b>(𐌘)funzione a tre dimensione che descrive la potenza di emissione della sorgente in una data direzione nello spazio</b></li>
+                    <li><b>(ρ, α, θ)posizione della sorgente</b></li>
                     <li><b>(ρ)modulo</b></li>
                     <li><b>(α)azimut</b></b></li>
                     <li><b>(θ)zenit</b></li>
@@ -259,14 +260,38 @@
                   <li><b>(G)forma dello spazio</b></li>
                   <li><b>(M)materiali</b></li>
                 </ul>
+                <p class="mbr-text mbr-fonts-style display-7">
+                  Tutto questo è per far capire che da un punto di vista di modello,
+                  lo spazio di fatto si comporta come un filtro:
+                  prende in ingresso un segnale in un certo punto dello spazio e lo restituisce in uscite in un altro punto dello spazio.
+                  <br>
+                  <br>
+                  Il problema è che questo sistema è funzione di talmente tante variabili che affrontarne lo studio è una cosa delicata e soprattutto va tratto con diversi livelli di approssimazione
+                   e di precisione.
+                   <br>
+                   <br>
+                   Per facilitare lo studio, nella formula presa in considerazione abbiamo omesso la variabile del movimento, sia della sorgente che del ricvitore.
+                   Possiamo dire che lo spazio è come un filtro con infinite possibilità di risposta all'impulso.
+                   Agendo con una sola coppia di emettitore-ricevitore otteniamo la risposta all'impulso per quel tipo di immagine.
+                   Spostando di poco uno dei due, la risposta all'impulso risulterebbe diversa.
+                   La risposta all'impulso è una delle tante mappe possibili di un determinato spazio.
                 </div>
             </div>
         </div>
     </section>
 
 
-Γ
+Tutto questo è per far capire che da un punto di vista di modello,
+lo spazio di fatto si comporta come un filtro:
+prende in ingresso un segnale in un certo punto dello spazio e lo restituisce in uscite in un altro punto dello spazio.
 
+Il problema è che questo sistema è funzione di talmente tante variabili che affrontarne lo studio è una cosa delicata e soprattutto va tratto con diversi livelli di approssimazione
+ e di precisione.
+
+ Per facilitare lo studio, nella formula presa in considerazione abbiamo omesso la variabile del movimento, sia della sorgente che del ricvitore.
+ Possiamo dire che lo spazio è come un filtro con infinite possibilità di risposta all'impulso.
+ Agendo con una sola coppia di emettitore-ricevitore otteniamo la risposta all'impulso per quel tipo di immagine.
+ Spostando di poco uno dei due, la risposta all'impulso risulterebbe diversa.
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
