--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -125,13 +125,13 @@
                     <b>Sorgente:</b>
                     <ul>
                       <li><b>Tipo di segnale</b> (come è fatto dal punto di vista spettro temporale)</b></li>
-                      <li><b>Funzione di direttività o di emissione</b> (qual'è il diagramma di potenza in funzione dell'angolo spaziale)</li>
+                      <li><b>Funzione di direttività o di emissione</b>, questa funzione è sia spaziale che frequenziale (qual'è il diagramma di potenza in funzione dell'angolo spaziale)</li>
                       <li><b>Posizione</b></li>
                    </ul>
                   <p class="mbr-text mbr-fonts-style display-7">
                     <b>Ascoltatore:</b>
                     <ul>
-                    <li><b>Funzione spaziale di ricezione o di sensibilità</b></li>
+                    <li><b>Funzione spaziale di ricezione o di sensibilità</b>, questa funzione è sia spaziale che frequenziale </li>
                     <li><b>Posizione</b> (a seconda della posizione reciproca tra sorgente e ascoltatore ogni volta otterrò una risposta diversa)</li>
                     </ul>
                     <p class="mbr-text mbr-fonts-style display-7">
@@ -280,18 +280,6 @@
         </div>
     </section>
 
-
-Tutto questo è per far capire che da un punto di vista di modello,
-lo spazio di fatto si comporta come un filtro:
-prende in ingresso un segnale in un certo punto dello spazio e lo restituisce in uscite in un altro punto dello spazio.
-
-Il problema è che questo sistema è funzione di talmente tante variabili che affrontarne lo studio è una cosa delicata e soprattutto va tratto con diversi livelli di approssimazione
- e di precisione.
-
- Per facilitare lo studio, nella formula presa in considerazione abbiamo omesso la variabile del movimento, sia della sorgente che del ricvitore.
- Possiamo dire che lo spazio è come un filtro con infinite possibilità di risposta all'impulso.
- Agendo con una sola coppia di emettitore-ricevitore otteniamo la risposta all'impulso per quel tipo di immagine.
- Spostando di poco uno dei due, la risposta all'impulso risulterebbe diversa.
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
