--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -270,7 +270,7 @@
                    e di precisione.
                    <br>
                    <br>
-                   Per facilitare lo studio, nella formula presa in considerazione abbiamo omesso la variabile del movimento, sia della sorgente che del ricvitore.
+                   Per facilitare lo studio, nella formula presa in considerazione abbiamo omesso la variabile del movimento, sia della sorgente che del ricevitore.
                    Possiamo dire che lo spazio è come un filtro con infinite possibilità di risposta all'impulso.
                    Agendo con una sola coppia di emettitore-ricevitore otteniamo la risposta all'impulso per quel tipo di immagine.
                    Spostando di poco uno dei due, la risposta all'impulso risulterebbe diversa.
