--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -262,7 +262,7 @@
                 </ul>
                 <p class="mbr-text mbr-fonts-style display-7">
                   Tutto questo è per far capire che da un punto di vista di modello,
-                  lo spazio di fatto si comporta come un filtro:
+                  <b>lo spazio di fatto si comporta come un filtro</b>:
                   prende in ingresso un segnale in un certo punto dello spazio e lo restituisce in uscite in un altro punto dello spazio.
                   <br>
                   <br>
