--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -277,8 +277,8 @@
                    La risposta all'impulso è una delle tante mappe possibili di un determinato spazio.
                    <br>
                    <br>
-                   Esistono software di progettazione acustica assistita come <a href="http://www.ramsete.com/home.htm"><i><b>Ramsete</b></i></a> che permettono di campionare la risposta all'impulso di più sorgenti e più ricevitori. 
-                   Essi vengono usati quando serve una progettazione più accurata, quale quella di un auditorium.
+                   Esistono software di progettazione acustica assistita, come <a href="http://www.ramsete.com/home.htm"><i><b>Ramsete</b></i></a> di Angelo Farina, che permettono di campionare la risposta all'impulso di più sorgenti e più ricevitori.
+                   Essi vengono usati quando serve una progettazione più accurata, quale quella di un auditorium, in quanto si può ottenere la risposta all'impulso per ogni singola seduta.
                 </div>
             </div>
         </div>
