--- a/pages/learn/acustica_degli_spazi_musicali/01_01_tre_metodi_di_studio.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_tre_metodi_di_studio.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Acustica degli Ambienti Musicali</title>
+  <title>Tre Metodi di Studio</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -72,103 +72,50 @@
   <!-- Navbar-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html"></div>
 
-
-<!-- Header-->
-<section data-bs-version="5.1" class="info3 cid-sYzbPCvQ7r mbr-parallax-background" id="info3-1g">
-  <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);">
-  </div>
-  <div class="container">
-      <div class="row justify-content-center">
-          <div class="card col-12 col-lg-10">
-              <div class="card-wrapper">
-                  <div class="card-box align-center">
-                      <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>ACUSTICA DEGLI AMBIENTI MUSICALI</strong></h4>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
+  <!-- Title-->
+<section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="title col-md-12 col-lg-10">
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Acustica degli Ambienti Musicali</h3>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Tre Metodi di Studio</strong></h4>
+            </div>
+        </div>
+    </div>
 </section>
 
 
-  <!-- Index-->
+  <!-- Text-->
 
-  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
+
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
-              <div class="col-md-12 col-lg-10">
-                  <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
-                    <br>
-                    <br>
-                      <strong>INDICE</strong>
-                  </h4>
+              <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    <ul>
-                      <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html"><b>01. Come Affrontare lo Studio dell'Acustica degli Ambienti</b></a></li>
-                      <ul>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_01_tre_metodi_di_studio.html"><b>01.01. Tre Metodi di Studio</b></a></li>
-                    </ul>
+
                   </p>
-              </div>
-          </div>
-      </div>
-  </section>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
-  <!-- Bibliografia-->
 
-  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="col-md-12 col-lg-10">
-                  <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
+<!-- Prev/Next-->
+<section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-10">
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
-                      <strong>BIBLIOGRAFIA</strong>
-                  </h4>
-                  <p class="mbr-text mbr-fonts-style display-7">
-                    <ul>
-                      <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/Master_Handbook_of_Acoustics_5th_Edition_(2009)_(Everest).pdf"><i><b>Master Handbook of Acoustics</b></i></a></li>
-                      <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/tesi_giordano.pdf"><i><b>Modellazione e Simulazione del Campo Acustico in Cavità a Geometria e Caratteristiche Acustiche Variabili, Tesi di Marco Giordano</b></i></a></li>
-                      <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/acoustics-for-engineers-2nd_troy-lectures.pdf"><i><b>Acoustics for Engineers</b></i></a></li>
-                    </ul>
-                  </p>
-              </div>
-          </div>
-      </div>
-  </section>
+            </div>
+        </div>
+    </div>
+</section>
 
-  <!-- Web-->
-
-  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="col-md-12 col-lg-10">
-                  <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
-                    <br>
-                    <br>
-                      <strong>WEB</strong>
-                  </h4>
-                  <p class="mbr-text mbr-fonts-style display-7">
-                    <ul>
-                      <li><a href="https://www.falstad.com/mathphysics.html"><b>Falstad - Applets</b></a></li>
-                      <li><a href="https://www.roomeqwizard.com/"><b>REW - Room Acoustics Software</b></a></li>
-                      <li><a href="https://amcoustics.com/tools/amroc?l=500&w=700&h=300&fo=200&fu=21&r60=0.6"><b>AMROC - The Room Modes Calculator</b></a></li>
-                      <li><a href="https://amcoustics.com/tools/amray"><b>AMROC - Raytracing sketchpad</b></a></li>
-                      <li><a href="http://hyperphysics.phy-astr.gsu.edu/hbase/Acoustic/auditcon.html#c1"><b>Hyperphysics</b></a>, sito di didattica della fisica organizzato per mappe concettuali. Il link si riferisce alla sezione dedicata all'acustica degli spazi.</li>
-                      <li><a href="http://www.acoustic-glossary.co.uk/"><b>Acoustic Glossary</b></a></li>
-                      <li><a href="https://store.uni.com/uni-en-iso-3382-1-2009"><b>Norma ISO 3382 Part 1</b></a>, spazi performativi</li>
-                      <li><a href="https://www.akutek.info/concert_hall_acoustics_files/parameters.htm"><b>AKUTEK.INFO (Concert Hall Acoustics)</b></a></li>
-                      <li><a href="https://www.akutek.info/concert_hall_acoustics_files/parameters.htm"><b>Acustica della sala da concerto</b></a></li>
-                      <li><a href="https://www.akutek.info/Presentations/MS_Preference_Prediction_Pres.pdf"><b>Room Acoustical Parameters: Can concert hall preference be predicted?</b></a></li>
-                      <li><a href="https://www.akutek.info/research.htm"><b>Sito di ricerca acustica</b></a></li>
-                    </ul>
-                      <br><br>
-                  </p>
-              </div>
-          </div>
-      </div>
-  </section>
 
 <!-- Footer-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
