--- a/pages/learn/acustica_degli_spazi_musicali/01_01_tre_metodi_di_studio.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_tre_metodi_di_studio.html
@@ -98,8 +98,10 @@
                       <li><b>Analisi ondulatoria o modale</b>: scrivo le equazioni differenziali del campo acustico, dopodichè le risolvo usando le condizioni a contorno che sono imposte dall'ambiente.
                       Questo metodo si applica a sistemi semplici quali corda, tubo o parete. Con esso, conoscendo i vincoli dello spazio preso in analisi, riusciamo ad analizzarne le onde stazionarie.
                     Questo tipo di approccio all'analisi di un ambiente richiede un ingente sforzo matematico, è dunque efficace in poche situazioni.</li>
-                      <li><b>Approccio geometrico</b>: simile all'pproccio di rendering di una immagine.</li>
-                      <li><b></b>: </li>
+                      <li><b>Approccio geometrico</b>: simile all'approccio di rendering di una immagine a tre dimensioni.
+                        Consiste nel considerare, anche nel campo acustico, l'energia come viaggiante secondo delle direzioni molto precise, in sostanza si suppone che il suono si comporti come la luce e attraverso dei software di simulazione si tenta di prevedere il comportamento del segnale nel sistema.
+                      Questa approssimazione è valida solo quando esiste una relazione frequenziale tra l'ambiente e il segnale.</li>
+                      <li><b>Approccio del campo diffuso</b>: si tratta il campo acustico </li>
                     </ul>
                   </p>
                 </div>
