--- a/pages/learn/acustica_degli_spazi_musicali/01_01_tre_metodi_di_studio.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_tre_metodi_di_studio.html
@@ -101,7 +101,11 @@
                       <li><b>Approccio geometrico</b>: simile all'approccio di rendering di una immagine a tre dimensioni.
                         Consiste nel considerare, anche nel campo acustico, l'energia come viaggiante secondo delle direzioni molto precise, in sostanza si suppone che il suono si comporti come la luce e attraverso dei software di simulazione si tenta di prevedere il comportamento del segnale nel sistema.
                       Questa approssimazione è valida solo quando esiste una relazione frequenziale tra l'ambiente e il segnale.</li>
-                      <li><b>Approccio del campo diffuso</b>: si tratta il campo acustico </li>
+                      <li><b>Approccio del campo diffuso</b>: si valuta il campo acustico attraverso l'ipotesi che passato un po di tempo dalle condizioni iniziali, l'energia si è diffusa e distribuita in maniera omogenea in tutto lo spazio e quindi si tirano fuori delle grandezze che descrivono il campo acustico in modo macroscopico.
+                      Per esempio, il tempo di riverberazione è una grandezza che non si preoccupa di valutare nel dettaglio quali sono le riflessioni, le interferenze, le diffrazioni di tutti i fronti d'onda del campo acustico,
+                     ma lo valuta in senso macroscopico, si occupa soltanto di capire qual'è la curva di decadimento delle energie in funzione del tempo, descrivendo dunque il campo acustico.
+                     
+                   </li>
                     </ul>
                   </p>
                 </div>
