--- a/pages/learn/acustica_degli_spazi_musicali/01_01_tre_metodi_di_studio.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_tre_metodi_di_studio.html
@@ -104,7 +104,7 @@
                       <li><b>Approccio del campo diffuso</b>: si valuta il campo acustico attraverso l'ipotesi che passato un po di tempo dalle condizioni iniziali, l'energia si è diffusa e distribuita in maniera omogenea in tutto lo spazio e quindi si tirano fuori delle grandezze che descrivono il campo acustico in modo macroscopico.
                       Per esempio, il tempo di riverberazione è una grandezza che non si preoccupa di valutare nel dettaglio quali sono le riflessioni, le interferenze, le diffrazioni di tutti i fronti d'onda del campo acustico,
                      ma lo valuta in senso macroscopico, si occupa soltanto di capire qual'è la curva di decadimento delle energie in funzione del tempo, descrivendo dunque il campo acustico.
-                     Immaginate un fronte d'onda sferico che ad un punto incontra le pareti ed inizia a rilettersi e diffrangersi ovunque nello spazio, otteniamo una situazione ergotica in cui ogni particella è disposta in maniera uniforme in tutto lo spazio.
+                     Immaginate un fronte d'onda sferico che ad un punto incontra le pareti ed inizia a rilettersi e diffrangersi ovunque nello spazio, otteniamo una situazione ergodica in cui ogni particella è disposta in maniera uniforme in tutto lo spazio.
                      In questa condizione posso dunque usare una visione macroscopica per l'analisi.
                    </li>
                     </ul>
