--- a/pages/learn/acustica_degli_spazi_musicali/01_01_tre_metodi_di_studio.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_tre_metodi_di_studio.html
@@ -92,15 +92,17 @@
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
-                  <p class="mbr-text mbr-fonts-style display-7">
+                  <p class="mbr-text mbr-fonts-style display-7" style="text-justify: inter-word;">
                     Come si fa a studiare la risposta di uno spazio? I metodi più utilizzati sono tre:
                     <ul>
                       <li><b>Analisi ondulatoria o modale</b>: scrivo le equazioni differenziali del campo acustico, dopodichè le risolvo usando le condizioni a contorno che sono imposte dall'ambiente.
                       Questo metodo si applica a sistemi semplici quali corda, tubo o parete. Con esso, conoscendo i vincoli dello spazio preso in analisi, riusciamo ad analizzarne le onde stazionarie.
                     Questo tipo di approccio all'analisi di un ambiente richiede un ingente sforzo matematico, è dunque efficace in poche situazioni.</li>
+                    <br>
                       <li><b>Approccio geometrico</b>: simile all'approccio di rendering di una immagine a tre dimensioni.
                         Consiste nel considerare, anche nel campo acustico, l'energia come viaggiante secondo delle direzioni molto precise, in sostanza si suppone che il suono si comporti come la luce e attraverso dei software di simulazione si tenta di prevedere il comportamento del segnale nel sistema.
                       Questa approssimazione è valida solo quando esiste una relazione frequenziale tra l'ambiente e il segnale.</li>
+                      <br>
                       <li><b>Approccio del campo diffuso</b>: si valuta il campo acustico attraverso l'ipotesi che passato un po di tempo dalle condizioni iniziali, l'energia si è diffusa e distribuita in maniera omogenea in tutto lo spazio e quindi si tirano fuori delle grandezze che descrivono il campo acustico in modo macroscopico.
                       Per esempio, il tempo di riverberazione è una grandezza che non si preoccupa di valutare nel dettaglio quali sono le riflessioni, le interferenze, le diffrazioni di tutti i fronti d'onda del campo acustico,
                      ma lo valuta in senso macroscopico, si occupa soltanto di capire qual'è la curva di decadimento delle energie in funzione del tempo, descrivendo dunque il campo acustico.
