--- a/pages/learn/acustica_degli_spazi_musicali/01_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -242,8 +242,41 @@
                       <h3 style="text-align:center;">
                       <b>x = t, 𐌘(α, θ), (ρ, α, θ)</b>
                     </h3>
-                    <br>
-                    <br>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+
+                    <!-- Video-->
+                    <section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+                      <div class="container">
+                          <div class="title-wrapper mb-5">
+                          </div>
+                          <div class="row align-items-center">
+                              <div class="col-12 col-lg-4 video-block">
+                                  <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/lLUcOFwZvyY" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                              </div>
+                              <div class="col-12 col-lg">
+                                  <div class="text-wrapper">
+                                      <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                                          <strong>Testing The World's Longest Echo</strong>
+                                      </h5>
+                                      <p class="mbr-text mbr-fonts-style display-7">
+
+                                      </p>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                    </section>
+
+                    <!-- Text-->
+                        <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                            <div class="container">
+                              <div class="row justify-content-center">
+                                <div class="col-md-12 col-lg-8">
+                                      <p class="mbr-text mbr-fonts-style display-7">
                     <h3>Variabili del sistema(h) e dell'uscita(y)</h3>
                     <br>
                     La funzione di tasferimento di questo sistema dipende dalla <b>forma dello spazio (G(ρ, α, θ))</b> e dai <b>materiali (M(ρ, α, θ))</b>.
