--- a/pages/learn/acustica_degli_spazi_musicali/01_01_tre_metodi_di_studio.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_tre_metodi_di_studio.html
@@ -94,7 +94,7 @@
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7" style="text-justify: inter-word;">
                     Come si fa a studiare la risposta di uno spazio? I metodi più utilizzati sono tre:
-                    <ul>
+                    <ul style="text-justify: inter-word;">
                       <li><b>Analisi ondulatoria o modale</b>: scrivo le equazioni differenziali del campo acustico, dopodichè le risolvo usando le condizioni a contorno che sono imposte dall'ambiente.
                       Questo metodo si applica a sistemi semplici quali corda, tubo o parete. Con esso, conoscendo i vincoli dello spazio preso in analisi, riusciamo ad analizzarne le onde stazionarie.
                     Questo tipo di approccio all'analisi di un ambiente richiede un ingente sforzo matematico, è dunque efficace in poche situazioni.</li>
