--- a/pages/learn/acustica_degli_spazi_musicali/01_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -276,8 +276,9 @@
                             <div class="container">
                               <div class="row justify-content-center">
                                 <div class="col-md-12 col-lg-8">
-                                  <h3>Variabili del sistema(h) e dell'uscita(y)</h3>
+                                  <h3><br>Variabili del sistema(h) e dell'uscita(y)</h3>
                                       <p class="mbr-text mbr-fonts-style display-7">
+                                        <br>
                     La funzione di tasferimento di questo sistema dipende dalla <b>forma dello spazio (G(ρ, α, θ))</b> e dai <b>materiali (M(ρ, α, θ))</b>.
                     Convolvendo il <b>sistema(h)</b> con <b>l'ingresso(x)</b>, otteniamo <b>l'uscita(y)</b> che possiamo descrivere in questo modo:
                     <br>
