--- a/pages/learn/acustica_degli_spazi_musicali/01_01_tre_metodi_di_studio.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_tre_metodi_di_studio.html
@@ -92,7 +92,7 @@
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
-                  <p class="mbr-text mbr-fonts-style display-7" style="text-justify: inter-word;">
+                  <p class="mbr-text mbr-fonts-style display-7" style="text-align: justify">
                     Come si fa a studiare la risposta di uno spazio? I metodi più utilizzati sono tre:
                     <ul style="text-justify: inter-word;">
                       <li><b>Analisi ondulatoria o modale</b>: scrivo le equazioni differenziali del campo acustico, dopodichè le risolvo usando le condizioni a contorno che sono imposte dall'ambiente.
