--- a/pages/learn/acustica_degli_spazi_musicali/modi_naturali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/modi_naturali.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Il Concetto di Pregiudizio</title>
+  <title>Modi Naturali</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -77,8 +77,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
-                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Il Paradigma di Stockhausen</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Vibrazione Come Modello Universale</strong></h4>
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Acustica degli Ambienti Musicali</h3>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Modi Naturali</strong></h4>
             </div>
         </div>
     </div>
@@ -86,14 +86,15 @@
 
 
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    
+                    Per iniziare ad affrontare l'approccio dell'analisi ondulatoria o modale, facciamo un richiamo ai modi naturali di un sistema risonante.
+                    Partiamo dallo studio dei modi naturali di una coppia di pareti parallele perfettamente riflettenti.
+                  Queste pareti determinano dei vincoli per il campo acustico, quindi impongono sostanziaomente che se il campo acustico è espresso attraverso la grandezza della pressione acustica, in corrisondenza delle pareti ci fossero due ventri (due massimi della espressione).
+                  In questo modo posso ricavare la lunghezza più grave del sistema
                   </p>
                 </div>
             </div>
