--- a/pages/learn/acustica_degli_spazi_musicali/layout - Copia.html
+++ b/pages/learn/acustica_degli_spazi_musicali/layout - Copia.html
@@ -77,7 +77,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
-                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Il Paradigma di Stockhausen</h3>
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Acustica degli Ambienti Musicali</h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Vibrazione Come Modello Universale</strong></h4>
             </div>
         </div>
@@ -86,14 +86,12 @@
 
 
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    
+
                   </p>
                 </div>
             </div>
