--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -107,6 +107,8 @@
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html"><b>01. Come Affrontare lo Studio dell'Acustica degli Ambienti</b></a></li>
                       <ul>
                         <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_01_tre_metodi_di_studio.html"><b>01.01. Tre Metodi di Studio</b></a></li>
+                        <ul>
+                          <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html"><b>01.01.01. Modi Naturali</b></a></li>
                     </ul>
                   </p>
               </div>
