--- a/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
@@ -93,7 +93,7 @@
                   <p class="mbr-text mbr-fonts-style display-7">
                     Per iniziare ad affrontare l'approccio dell'analisi ondulatoria o modale, facciamo un richiamo ai modi naturali di un sistema risonante.
                     Partiamo dallo studio dei modi naturali di una coppia di pareti parallele perfettamente riflettenti.
-                  Queste pareti determinano dei vincoli per il campo acustico, quindi impongono sostanziaomente che se il campo acustico è espresso attraverso la grandezza della pressione acustica, in corrisondenza delle pareti ci fossero due ventri (due massimi della espressione).
+                  Queste pareti determinano dei vincoli per il campo acustico, quindi impongono sostanziaomente che se il campo acustico è espresso attraverso la grandezza della pressione acustica, in corrisondenza delle pareti ci siano due ventri (due massimi della espressione).
                   In questo modo, ponendo un nodo al centro del sistema, posso disegnare il profilo di pressione del modo naturale più grave del sistema stesso.
                   </p>
                 </div>
