--- a/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
@@ -108,7 +108,7 @@
                       <div class="col-12 col-lg-5">
                           <div class="image-wrapper">
                               <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/04_modo_naturalex.png" alt="www.gabrielavelitch.com">
-                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Modo naturale di una coppia di pareti rifettenti</p>
+                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Modo naturale di una coppia di pareti riflettenti</p>
                           </div>
                       </div>
                   </div>
