--- a/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
@@ -107,13 +107,41 @@
                   <div class="row justify-content-center">
                       <div class="col-12 col-lg-5">
                           <div class="image-wrapper">
-                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/04_modo_naturalex.png" alt="www.gabrielavelitch.com">
+                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/04_I_modo_naturale.png" alt="www.gabrielavelitch.com">
                               <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Primo modo naturale di una coppia di pareti riflettenti</p>
                           </div>
                       </div>
                   </div>
               </div>
           </section>
+
+          <!-- Text-->
+          <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+              <div class="container">
+                  <div class="row justify-content-center">
+                      <div class="col-md-12 col-lg-8">
+                          <p class="mbr-text mbr-fonts-style display-7">
+                            Aggiungendo un altro nodo otteniamo il secondo modo naturale del sistema:
+                          </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+          <!-- Image-->
+                <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                    <div class="container-fluid">
+                        <div class="row justify-content-center">
+                            <div class="col-12 col-lg-5">
+                                <div class="image-wrapper">
+                                    <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/04_II_modo_naturale.png" alt="www.gabrielavelitch.com">
+                                    <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Secondo modo naturale di una coppia di pareti riflettenti</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
