--- a/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
@@ -121,7 +121,7 @@
                   <div class="row justify-content-center">
                       <div class="col-md-12 col-lg-8">
                           <p class="mbr-text mbr-fonts-style display-7">
-                            Aggiungendo un altro nodo otteniamo il secondo modo naturale del sistema:
+                            Aggiungendo un altro nodo otteniamo il profilo di pressione del secondo modo naturale del sistema:
                           </p>
                         </div>
                     </div>
@@ -141,6 +141,20 @@
                         </div>
                     </div>
                 </section>
+
+                <!-- Text-->
+                <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-md-12 col-lg-8">
+                                <p class="mbr-text mbr-fonts-style display-7">
+                                  Andando così avanti, otteniamo una famiglia di modi naturali, per i quali la frequenza associata ad ognuno è uguale a <b>fn = n * f1</b>.
+                                </p>
+                              </div>
+                          </div>
+                      </div>
+                  </section>
+
 
 
 <!-- Prev/Next-->
