--- a/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
@@ -150,6 +150,7 @@
                                 <p class="mbr-text mbr-fonts-style display-7">
                                   Andando così avanti, otteniamo una famiglia di modi naturali, per i quali la frequenza associata ad ognuno è uguale a <b>fn = n * f1</b>.
                                   Analizzando questo metodo deduciamo che le frequenze di un ipotetito suono che sono in relazione alla famiglia armonica del sistema durano più a lungo nel tempo, tutte le freuenze che invece non ne fanno parte si estinguono in minor tempo in quanto non soddisfano i vincoli delle due pareti.
+                                  Il risultato della sovrapposizione di tutte queste onde stazionarie armoniche, considerando il teorema di Fourier, sarà un segnale periodioco, cioè armonico, cioè dotato di intonazione (pitch).
                                 </p>
                               </div>
                           </div>
